--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="#">Future Imperfect</a></h1>
+						<h1><a href="#">Shanghai Osaka</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
+								<li><a href="#">Présentation</a></li>
+								<li><a href="#">Menu</a></li>
 								<li><a href="#">Feugiat</a></li>
 								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="#">Nous </a></li>
 							</ul>
 						</nav>
 						<nav class="main">
